--- a/index.html
+++ b/index.html
@@ -3040,19 +3040,19 @@
 <td>Oct, Nov 2023; June, July, Sept 2024</td>
 <td>Talks and posters</td>
 <td>Investigating language learning and morphosyntactic transfer longitudinally using artificial languages <span style = 'color: grey;'>[information and slides available to researchers and research students upon request while study in progress, before being made public]</span></td>
-<td>(1) <a href="https://uit.no/research/acqva">AcqVA Aurora Centre</a>, UiT The Arctic University of Norway; <br> (2) <a href="https://site.uit.no/polar">PoLaR Lab</a>, UiT The Arctic University of Norway; <br> (3) <a href="https://www.ntnu.edu/langdevlab/salc9">SALC9</a>, NTNU; <br> (4) <a href="https://hils2024.nl">HILS</a>, Radboud U.; <br> (5) <a href="https://amlap2024.ed.ac.uk">AMLaP</a>, U. Edinburgh</td>
+<td>(1) <a href="https://uit.no/research/acqva">AcqVA Aurora Centre</a>, UiT The Arctic University of Norway; <br> (2) <a href="https://site.uit.no/polar">PoLaR Lab</a>, UiT The Arctic University of Norway; <br> (3) <a href="https://www.ntnu.edu/langdevlab/salc9">SALC9</a>, NTNU; <br> (4) <a href="https://hils2024.nl">Highlights in the Language Sciences 2024</a>, Radboud U.; <br> (5) <a href="https://amlap2024.ed.ac.uk">AMLaP</a>, U. Edinburgh</td>
 </tr>
 <tr>
-<td>Oct 2022; July 2024</td>
-<td>Talk &amp; poster</td>
-<td>Language and sensorimotor simulation in conceptual processing: Multilevel analysis and statistical power (<a href="https://osf.io/4uwzc">talk</a> / poster to follow)</td>
-<td>(1) <a href="https://uit.no/research/acqva">AcqVA Aurora Centre</a>, UiT The Arctic University of Norway; <br> (2) <a href="https://hils2024.nl">HILS</a>, Radboud U.</td>
+<td>July 2024</td>
+<td>Poster</td>
+<td>Language and vision in conceptual processing: Multilevel analysis and statistical power <span style = 'color: grey;'>[link to follow]</span></td>
+<td><a href="https://hils2024.nl">Highlights in the Language Sciences 2024</a>, Radboud University</td>
 </tr>
 <tr>
-<td>Mar 2024</td>
+<td>Mar, July 2024</td>
 <td>Poster</td>
 <td><a href="/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair">Making research materials Findable, Accessible, Interoperable and Reusable</a></td>
-<td><a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway</td>
+<td>(1) <a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway; <br> (2) <a href="https://hils2024.nl">Highlights in the Language Sciences 2024</a>, Radboud University</td>
 </tr>
 <tr>
 <td>Mar 2024</td>
@@ -3077,6 +3077,12 @@
 <td>Reading group discussion</td>
 <td><a href="/presentation/discussion-of-jost-et-al-2019">Discussion of Jost et al. (2019): Input complexity affects long-term retention of statistically learned regularities in an artificial language learning task</a></td>
 <td>Reading group of the PoLaR Lab, UiT The Arctic University of Norway</td>
+</tr>
+<tr>
+<td>Oct 2022</td>
+<td>Talk</td>
+<td><a href="https://osf.io/4uwzc">Language and sensorimotor simulation in conceptual processing: Multilevel analysis and statistical power</a></td>
+<td><a href="https://uit.no/research/acqva">AcqVA Aurora Centre</a>, UiT The Arctic University of Norway</td>
 </tr>
 <tr>
 <td>Sept 2022</td>
