--- a/index.html
+++ b/index.html
@@ -3065,10 +3065,10 @@
 <td><a href="https://hils2024.nl">Highlights in the Language Sciences 2024</a>, Radboud University</td>
 </tr>
 <tr>
-<td>Mar, July 2024</td>
+<td>Mar, July, Sept 2024</td>
 <td>Poster</td>
 <td><a href="/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair">Making research materials Findable, Accessible, Interoperable and Reusable</a></td>
-<td>(1) <a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway; <br> (2) <a href="https://hils2024.nl">Highlights in the Language Sciences 2024</a>, Radboud University</td>
+<td>(1) <a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway; <br> (2) <a href="https://hils2024.nl">Highlights in the Language Sciences 2024</a>, Radboud University; <br> (3) <a href="https://amlap2024.ed.ac.uk">AMLaP</a>, U. Edinburgh</td>
 </tr>
 <tr>
 <td>Mar 2024</td>
