--- a/presentation/index.html
+++ b/presentation/index.html
@@ -608,8 +608,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/h83yq" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
