--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -615,6 +615,45 @@
 
 
 
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+    
+  
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/h83yq" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 
 </div>
 
@@ -691,6 +730,13 @@
       
 
 
+<a href='https://mfr.osf.io/render?url=https://osf.io/h83yq/?direct%26mode=render%26action=download%26mode=render'>
+<button style = "background-color: white; color: black; border: 2px solid #196F27; border-radius: 12px;">
+<h3 style="margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;">
+<span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>  Poster
+</h3>
+</button>
+<p></a>  </p>
 <div id="snippet-1" class="section level4">
 <h4>Snippet 1</h4>
 <p><em>The use of code scripts facilitates the reproducibility, testability and expandability of materials.</em></p>
@@ -831,9 +877,6 @@ def send_trigger(trigger):
     serialport.write(int(0).to_bytes(length = 1, byteorder = &#39;big&#39;)) 
     return;
 </code></pre>
-</div>
-<div class="alert alert-warning" role="alert" style="padding-bottom: 0; margin-top: 7.5%; margin-bottom: 6%;">
-<p>The poster is available to researchers and research students upon request while the study is in progress. Afterwards, it will be made public.</p>
 </div>
 </div>
 <div id="references" class="section level4">
