--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -731,7 +731,9 @@
           <div class="col-12 col-md-9">
             <a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024" target="_blank" rel="noopener">
             AcqVA Aurora Closing Event, UiT The Arctic University of Norway
-            </a>
+            </a> <br>
+            <p style="font-size:80%; color:Gray; line-height:150%; font-style:italic;">This presentation may have taken place at more events.<br>See list in <a href="/#presentations">Presentations</a>.</p> 
+            
           </div>
         </div>
       </div>
