--- a/index.html
+++ b/index.html
@@ -1991,7 +1991,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/bernabeu-2017-mphil-thesis/" >Modality switches occur early and extend late in conceptual processing: Evidence from ERPs [Master's thesis]</a>
+      <a href="/publication/bernabeu-2017-mphil-thesis/" >Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</a>
     </h3>
 
     
