--- a/publication/index.html
+++ b/publication/index.html
@@ -1448,7 +1448,7 @@
 
   </span>
   (2017).
-  <a href="/publication/bernabeu-2017-mphil-thesis/">Modality switches occur early and extend late in conceptual processing: Evidence from ERPs [Master's thesis]</a>.
+  <a href="/publication/bernabeu-2017-mphil-thesis/">Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</a>.
   PsyArXiV Preprints.
   
   <p>
