--- a/cv/index.html
+++ b/cv/index.html
@@ -57,7 +57,9 @@
     <div style = 'position: absolute; overflow: hidden; margin: 0; padding: 0; left: 0px; right: 0px;'>
     
       <div class = 'menu'>
-          <a href = 'https://osf.io/download/84ktq' class = 'cv-button' style = 'font-weight: bold;'>Download</a><span style = 'color: darkgrey; font-weight: bold; padding-right: 4%; padding-left: 4%;'>Curriculum vitae</span><a href = '/#bio' class = 'cv-button'>Further content</a>
+        <a href = 'https://osf.io/download/84ktq' class = 'cv-button' style = 'font-weight: bold;'>Download</a>
+        <span style = 'color: darkgrey; font-weight: bold; padding-right: 4%; padding-left: 4%;'>Curriculum vitae</span>
+        <a href = '/#bio' class = 'cv-button'>Further content</a>
       </div>
       
       <div class = 'pdf'>
