--- a/index.html
+++ b/index.html
@@ -4237,7 +4237,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 
     
     <div class="article-style">
-      Given all of the data that E&amp;L cite, how could anyone maintain the notion of a universal grammar with linguistic content? …
+      Given all of the data that E&amp;L [Evans and Levinson] cite, how could anyone maintain the notion of a universal grammar with …
     </div>
     
 
