--- a/index.html
+++ b/index.html
@@ -4232,7 +4232,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2024/passives-and-the-often-ignored-asymmetry-between-languages/" >Passives and the often-ignored asymmetries between languages</a>
+      <a href="/2024/passive-constructions-and-asymmetries-between-languages/" >Passive constructions and asymmetries between languages</a>
     </h3>
 
     
