--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1035,15 +1035,15 @@
 
 
 
-
-
   
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://nuigalway.mediaspace.kaltura.com/media/OSW2021%3A%20OSCG%20Open%20Scholarship%20Prize%20-%20The%20Final!/1_d7ekd3d3/121659351" target="_blank" rel="noopener">
-  Video
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://slideshare.net/slideshow/embed_code/key/btTmVtxioR1Ru0" target="_blank" rel="noopener">
+  Slides
 </a>
+
+
 
 
 
