--- a/index.html
+++ b/index.html
@@ -4077,7 +4077,7 @@
     <div class="col-12 col-lg-8">
       <h3 id="span-stylecolorgrey-font-size702024-spannbsp-lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling"><span style='color:grey; font-size:70%;'>2024 ·</span>  Lowering impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling</h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
-<iframe src="https://www.youtube-nocookie.com/embed/y061dT2hEbY" frameborder="0" allowfullscreen
+<iframe src="https://www.youtube-nocookie.com/embed/4KLtp-WnOOo" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
 <h3 id="span-stylecolorgrey-font-size702024-spannbsp-briefing-participants-to-prevent-muscle-artifacts-in-electroencephalography-sessions2024preventing-muscle-artifacts-in-electroencephalography-sessions"><span style='color:grey; font-size:70%;'>2024 ·</span>  <a href="/2024/preventing-muscle-artifacts-in-electroencephalography-sessions">Briefing participants to prevent muscle artifacts in electroencephalography sessions</a></h3>
@@ -4249,7 +4249,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="https://www.youtube.com/watch?v=y061dT2hEbY" target="_self" rel="noopener">Lowering impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling (video)</a>
+      <a href="https://www.youtube.com/watch?v=4KLtp-WnOOo" target="_self" rel="noopener">Lowering impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling (video)</a>
     </h3>
 
     
