--- a/index.html
+++ b/index.html
@@ -4254,12 +4254,12 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2024/lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling/" >Lowering impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling</a>
+      <a href="/2024/lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling/" >Reducing the impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling</a>
     </h3>
 
     
     <div class="article-style">
-      Reducing impedance in electroencephalography (EEG) is crucial for capturing high-quality brain activity signals. This process involves …
+      Reducing the impedance in electroencephalography (EEG) is crucial for capturing high-quality brain activity signals. This process …
     </div>
     
 
