--- a/index.html
+++ b/index.html
@@ -4466,7 +4466,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/electroencephalography/">electroencephalography</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/research-methods/">research methods</a></span>
   
 
 </div>
