--- a/index.html
+++ b/index.html
@@ -3744,7 +3744,7 @@
 </tbody>
 </table>
 <p>Furthermore, during my PhD, I was a representative for graduate teaching assistants in my department for a year.</p>
-<p>Last, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">Spanish to adults in Lithuania</a>.</p>
+<p>Finally, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">Spanish to adults in Lithuania</a>.</p>
 
     </div>
   
