--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -768,6 +768,14 @@
 </h3>
 </button>
 <p></a>  </p>
+<style>.embed-responsive{position:relative;height:100%;}.embed-responsive iframe{position:absolute;height:100%;}</style>
+<script>window.jQuery || document.write('<script src="//code.jquery.com/jquery-1.11.2.min.js">\x3C/script>') </script>
+<link href="https://mfr.osf.io/static/css/mfr.css" media="all" rel="stylesheet">
+<div id="mfrIframe" class="mfr mfr-file">
+
+</div>
+<script src="https://mfr.osf.io/static/js/mfr.js"></script>
+<script>var mfrRender = new mfr.Render("mfrIframe", "https://mfr.osf.io/render?url=https://osf.io/h83yq/?direct%26mode=render%26action=download%26mode=render");</script>
 <div id="snippet-1" class="section level4">
 <h4>Snippet 1</h4>
 <p><em>The use of code scripts facilitates the reproducibility, testability and expandability of materials.</em></p>
