--- a/index.html
+++ b/index.html
@@ -3071,8 +3071,8 @@
 <tr>
 <td>Nov 2024</td>
 <td>Co-organisation and presentations</td>
-<td>Contributions to electroencephalography and behavioural stations at the <a href="https://uit.no/tavla/artikkel/862114/sprakdag_med_c-labl_senter_for_sprak_hjerne_og">public outreach event of C-LaBL</a>, hosted at the Arctic University Museum of Norway.</td>
-<td></td>
+<td>Tasks tailored for several electroencephalography and behavioural stations. Short presentations given on electroencephalography, language acquisition and executive functions.</td>
+<td><a href="https://uit.no/tavla/artikkel/862114/sprakdag_med_c-labl_senter_for_sprak_hjerne_og">Public outreach event of the UiT Center for Language, Brain and Learning</a>, hosted at the Arctic University Museum of Norway.</td>
 </tr>
 <tr>
 <td>Oct, Nov 2024</td>
