--- a/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
+++ b/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
@@ -762,6 +762,8 @@
   
   <a class="badge badge-light" href="/tags/multilingualism/">multilingualism</a>
   
+  <a class="badge badge-light" href="/tags/psycholinguistics/">psycholinguistics</a>
+  
   <a class="badge badge-light" href="/tags/crosslinguistic-transfer/">crosslinguistic transfer</a>
   
   <a class="badge badge-light" href="/tags/language-learning/">language learning</a>
