--- a/index.html
+++ b/index.html
@@ -3395,7 +3395,7 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://en.uit.no/go/target/789811">Postdoctoral fellow</a>, Nov <strong>2022</strong> &ndash; <em>Feb <strong>2025</strong></em></p>
               <p class="institution" style="color:#5B5B5B">UiT The Arctic University of Norway</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: co-organisation of multiple events, including the lunch meetings of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2"><span style = "white-space: nowrap;">C-LaBL</span></a>; peer-review for <em>Cognition</em> and <em>Cognitive Science</em>.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <strong>Service:</strong> co-organisation of multiple events, including the lunch meetings of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2"><span style = "white-space: nowrap;">C-LaBL</span></a>, and a public outreach event of C-LaBL. Peer-review for <em>Cognition</em>, <em>Cognitive Science</em> and EuroSLA conference.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
