--- a/publication/bernabeu-tillman-2019/index.html
+++ b/publication/bernabeu-tillman-2019/index.html
@@ -607,6 +607,13 @@
   
 
   
+  <span class="middot-divider"></span>
+  <span class="pub-publication">
+    
+      <em>Dutch Journal of Applied Linguistics</em>
+    
+  </span>
+  
 
   
 
