--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -605,6 +605,13 @@
   
 
   
+  <span class="middot-divider"></span>
+  <span class="pub-publication">
+    
+      <em>Tenth Language at the University of Essex (LangUE) Postgraduate Conference</em>
+    
+  </span>
+  
 
   
 
