--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -599,6 +599,13 @@
   
 
   
+  <span class="middot-divider"></span>
+  <span class="pub-publication">
+    
+      OSF Preprints
+    
+  </span>
+  
 
   
 
