--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -605,6 +605,13 @@
   
 
   
+  <span class="middot-divider"></span>
+  <span class="pub-publication">
+    
+      OSF
+    
+  </span>
+  
 
   
 
