--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -607,6 +607,13 @@
   
 
   
+  <span class="middot-divider"></span>
+  <span class="pub-publication">
+    
+      <em>International Journal of Multilingualism</em>
+    
+  </span>
+  
 
   
 
