--- a/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
+++ b/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
@@ -572,7 +572,7 @@
   
   
   
-  <div>
+  <span>
     
 
 
@@ -580,7 +580,7 @@
   
   <span><span style="font-size:140%;">Pablo Bernabeu, Gabriella Silva, Ngoc Giang My Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
 
-  </div>
+  </span>
   
   
 
