--- a/presentation/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index.html
+++ b/presentation/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index.html
@@ -560,7 +560,7 @@
   
   
   
-  <div>
+  <span>
     
 
 
@@ -568,7 +568,7 @@
   
   <span><span style="font-size:140%;">Pablo Bernabeu, Dermot Lynott and Louise Connell</span></span>
 
-  </div>
+  </span>
   
   
 
