--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -570,7 +570,7 @@
   
   
   
-  <div>
+  <span>
     
 
 
@@ -578,7 +578,7 @@
   
   <span><span style="font-size:140%;">Pablo Bernabeu, Gabriella Silva, Ngoc Giang My Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
 
-  </div>
+  </span>
   
   
 
