--- a/publication/index.html
+++ b/publication/index.html
@@ -677,7 +677,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1080/14790718.2024.2415993" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -784,7 +784,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31219/osf.io/2qf6w" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -887,7 +887,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/dnskh" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1017,7 +1017,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/download/97u5c" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1147,7 +1147,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/ftydw/" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1226,7 +1226,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1075/dujal.15019.ber" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1313,7 +1313,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/s2c5h" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1424,7 +1424,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/a5pcz" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1597,7 +1597,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/5gjvk" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
@@ -1754,7 +1754,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.researchgate.net/profile/Pablo_Bernabeu3/publication/280858062_Language_evolution_Current_status_and_future_directions/links/59309ba2a6fdcc89e784596c/Language-evolution-Current-status-and-future-directions.pdf" target="_blank" rel="noopener">
-  PDF
+  <i class="fa fa-file-pdf"></i> PDF
 </a>
 
 
