--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -760,6 +760,25 @@
 <h3>Reference</h3>
 <p>González Alonso, J., Bernabeu, P., Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J. (2024). Starting from the very beginning: Unraveling third language (L3) development with longitudinal data from artificial language learning and related epistemology. <em>International Journal of Multilingualism, 1</em>(22). <a href="https://doi.org/10.1080/14790718.2024.2415993" class="uri">https://doi.org/10.1080/14790718.2024.2415993</a></p>
 </div>
+<div id="addendum" class="section level3">
+<h3>Addendum</h3>
+<div id="materials" class="section level4">
+<h4>Materials</h4>
+<p>Documentation practices and open-source software (namely, R and OpenSesame) were used to prepare the materials for the current study. In previous similar studies, the materials have not generally been very Findable, Accessible, Interoperable or Reusable (Cross et al., 2021; González Alonso et al., 2020; Mitrofanova et al., 2023; Morgan-Short et al., 2012; Pereira Soares et al., 2022). In contrast, in our current study, the stimuli were prepared in R using a modular framework that consisted of interoperable components (se <a href="https://osf.io/974k8" class="uri">https://osf.io/974k8</a>). The modularity of this method facilitates the expansion of the materials within the same languages and to other languages. Specifically, the minimal components of each language were contained in a base file in the ‘stimulus_preparation’ folder. Furthermore, for the creation of the final stimuli, several controls were exerted to prevent spurious effects. For instance, gender and number were counterbalanced across experimental conditions, words were rotated across grammatical properties and sessions, and frequency of occurrence was controlled. The final stimuli can be recreated using the script ‘compile_all_stimuli.R’, and the resulting stimuli are saved to the ‘session_materials’ folder. Furthermore, the final stimuli were presented using OpenSesame, which is a free-of-charge software supporting experiments in the social sciences. The implementation of the four lab-based sessions in OpenSesame involved the use of conditions for controlling the engagement of certain items. In conclusion, the materials of the current study are accessible, and the workflow is reproducible. As a result, the final materials are testable, modifiable and expandable, improving long-term efficiency.</p>
+</div>
+<div id="acknowledgements" class="section level4">
+<h4>Acknowledgements</h4>
+<p>Below, we gratefully acknowledge the help and advice we received from many of our colleagues and students.</p>
+<ul>
+<li><p>Mona Kirkness Fossum (translation of stimuli)
+Gaute Berglund, Anders Gabrielsen, Tekabe Legesse Feleke, My Ngoc Giang Hoang (piloting of sessions)</p></li>
+<li><p>Björn Lundquist (OpenSesame)</p></li>
+<li><p>Teodóra Vékony (alternating serial reaction time task)</p></li>
+<li><p>Antonio Fábregas, Natalia Mitrofanova, Yulia Rodina, Marit Westergaard (study design and translations)</p></li>
+<li><p>Merete Anderssen, Fatih Bayram (recruitment)</p></li>
+</ul>
+</div>
+</div>
 <div id="lay-summary" class="section level3">
 <h3>Lay summary</h3>
 <p>Do people learn a third language differently from their second one? For those already fluent in two languages, acquiring a third one introduces specific complexities. We are investigating this process using artificial languages, which allow for precise control and observation of the learning experience.</p>
