--- a/index.html
+++ b/index.html
@@ -3291,7 +3291,7 @@
 <td>Nov 2024</td>
 <td>Co-organisation and presentations</td>
 <td>Tasks tailored for several electroencephalography and behavioural stations. Short presentations given on electroencephalography, language acquisition and executive functions.</td>
-<td><a href="https://uit.no/tavla/artikkel/862114/sprakdag_med_c-labl_senter_for_sprak_hjerne_og">Public outreach event of the UiT Center for Language, Brain and Learning</a>, hosted at the Arctic University Museum of Norway.</td>
+<td><a href="https://uit.no/tavla/artikkel/862114/sprakdag_med_c-labl_senter_for_sprak_hjerne_og">Public outreach event of the UiT Center for Language, Brain and Learning (C-LaBL)</a>, hosted at the Arctic University Museum of Norway.</td>
 </tr>
 <tr>
 <td>Oct, Nov 2024</td>
@@ -3614,7 +3614,7 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://en.uit.no/go/target/789811">Postdoctoral fellow</a>, Nov <strong>2022</strong> &ndash; <em>Feb <strong>2025</strong></em></p>
               <p class="institution" style="color:#5B5B5B">UiT The Arctic University of Norway</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <strong>Service:</strong> co-organisation of multiple events, including the lunch meetings of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2"><span style = "white-space: nowrap;">C-LaBL</span></a>, and a public outreach event of C-LaBL. Peer-review for <em>Cognition</em>, <em>Cognitive Science</em> and EuroSLA conference.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Additional service: co-organisation of multiple events, including the lunch meetings of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2"><span style = "white-space: nowrap;">C-LaBL</span></a>, and a public outreach event of C-LaBL. Peer-review for <em>Cognition</em>, <em>Cognitive Science</em> and EuroSLA conference.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
@@ -3650,7 +3650,7 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu(5add90d6-f60f-4a88-91fc-b2e756579109).html">PhD Psychology with graduate teaching scholarship</a>, <strong>2018&ndash;2022</strong></p>
               <p class="institution" style="color:#5B5B5B">Lancaster University (United Kingdom)</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognitive Science and for Psychological Science Accelerator; development of website for open science group in my department.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Additional service: peer-review for Cognitive Science and for Psychological Science Accelerator; development of website for open science group in my department.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu(5add90d6-f60f-4a88-91fc-b2e756579109)/activities.html">Activities</a></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
