--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -768,7 +768,7 @@
 </div>
 <div id="acknowledgements" class="section level4">
 <h4>Acknowledgements</h4>
-<p>Below, we gratefully acknowledge the help and advice we received from many of our colleagues and students.</p>
+<p>Below, we gratefully acknowledge some of the invaluable help and advice we received.</p>
 <ul>
 <li><p>Mona Kirkness Fossum (translation of stimuli)
 Gaute Berglund, Anders Gabrielsen, Tekabe Legesse Feleke, My Ngoc Giang Hoang (piloting of sessions)</p></li>
