--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -765,17 +765,26 @@
 <div id="materials" class="section level4">
 <h4>Materials</h4>
 <p>Documentation practices and open-source software (namely, R and OpenSesame) were used to prepare the materials for the current study. In previous similar studies, the materials have not generally been very Findable, Accessible, Interoperable or Reusable (Cross et al., 2021; González Alonso et al., 2020; Mitrofanova et al., 2023; Morgan-Short et al., 2012; Pereira Soares et al., 2022). In contrast, in our current study, the stimuli were prepared in R using a modular framework that consisted of interoperable components (se <a href="https://osf.io/974k8" class="uri">https://osf.io/974k8</a>). The modularity of this method facilitates the expansion of the materials within the same languages and to other languages. Specifically, the minimal components of each language were contained in a base file in the ‘stimulus_preparation’ folder. Furthermore, for the creation of the final stimuli, several controls were exerted to prevent spurious effects. For instance, gender and number were counterbalanced across experimental conditions, words were rotated across grammatical properties and sessions, and frequency of occurrence was controlled. The final stimuli can be recreated using the script ‘compile_all_stimuli.R’, and the resulting stimuli are saved to the ‘session_materials’ folder. Furthermore, the final stimuli were presented using OpenSesame, which is a free-of-charge software supporting experiments in the social sciences. The implementation of the four lab-based sessions in OpenSesame involved the use of conditions for controlling the engagement of certain items. In conclusion, the materials of the current study are accessible, and the workflow is reproducible. As a result, the final materials are testable, modifiable and expandable, improving long-term efficiency.</p>
+<div id="references" class="section level5">
+<h5>References</h5>
+<p>Cross, Z. R., Zou-Williams, L., Wilkinson, E. M., Schlesewsky, M., &amp; Bornkessel-Schlesewsky, I. (2021). Mini Pinyin: A modified miniature language for studying language learning and incremental sentence processing. <em>Behavior Research Methods, 53</em>(3), 1218–1239. <a href="https://doi.org/10.3758/s13428-020-01473-6" class="uri">https://doi.org/10.3758/s13428-020-01473-6</a></p>
+<p>González Alonso, J., Alemán Bañón, J., DeLuca, V., Miller, D., Pereira Soares, S. M., Puig-Mayenco, E., Slaats, S., &amp; Rothman, J. (2020). Event related potentials at initial exposure in third language acquisition: Implications from an artificial mini-grammar study. <em>Journal of Neurolinguistics, 56</em>, 100939. <a href="https://doi.org/10.1016/j.jneuroling.2020.100939" class="uri">https://doi.org/10.1016/j.jneuroling.2020.100939</a></p>
+<p>Mitrofanova, N., Leivada, E., &amp; Westergaard, M. (2023). Crosslinguistic influence in L3 acquisition: Evidence from artificial language learning. <em>Linguistic Approaches to Bilingualism, 13</em>(5), 717-742. <a href="https://doi.org/10.1075/lab.22063.mit" class="uri">https://doi.org/10.1075/lab.22063.mit</a></p>
+<p>Morgan-Short, K., Finger, I., Grey, S., &amp; Ullman, M. T. (2012). Second language processing shows increased native-like neural responses after months of no exposure. <em>PLOS ONE, 7</em>(3), e32974. <a href="https://doi.org/10.1371/journal.pone.0032974" class="uri">https://doi.org/10.1371/journal.pone.0032974</a></p>
+<p>Pereira Soares, S. M., Kupisch, T., &amp; Rothman, J. (2022). Testing potential transfer effects in heritage and adult L2 bilinguals acquiring a mini grammar as an additional language: An ERP approach. <em>Brain Sciences, 12</em>(5), Article 5. <a href="https://doi.org/10.3390/brainsci12050669" class="uri">https://doi.org/10.3390/brainsci12050669</a></p>
+</div>
 </div>
 <div id="acknowledgements" class="section level4">
 <h4>Acknowledgements</h4>
 <p>Below, we gratefully acknowledge some of the invaluable help and advice we received.</p>
 <ul>
-<li><p>Mona Kirkness Fossum (translation of stimuli)
-Gaute Berglund, Anders Gabrielsen, Tekabe Legesse Feleke, My Ngoc Giang Hoang (piloting of sessions)</p></li>
-<li><p>Björn Lundquist (OpenSesame)</p></li>
+<li><p>My Ngoc Giang Hoang (piloting of sessions, recruitment of participants and collection of data)</p></li>
+<li><p>Mona Kirkness Fossum (translation of materials)</p></li>
+<li><p>Gaute Berglund, Anders Gabrielsen, Tekabe Legesse Feleke (piloting of sessions)</p></li>
 <li><p>Teodóra Vékony (alternating serial reaction time task)</p></li>
-<li><p>Antonio Fábregas, Natalia Mitrofanova, Yulia Rodina, Marit Westergaard (study design and translations)</p></li>
-<li><p>Merete Anderssen, Fatih Bayram (recruitment)</p></li>
+<li><p>Björn Lundquist (creation of task in OpenSesame)</p></li>
+<li><p>Antonio Fábregas, Natalia Mitrofanova, Yulia Rodina, Marit Westergaard (design of study, translation of materials and recruitment of participants)</p></li>
+<li><p>Merete Anderssen, Fatih Bayram (recruitment of participants)</p></li>
 </ul>
 </div>
 </div>
