--- a/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
+++ b/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
@@ -717,11 +717,11 @@
     
 
     
-    <div class="row" style="padding-top:8px;">
-      <div class="col-md-1" style="margin-left:-30px;"></div>
+    <div class="row" style="padding-top:8px; margin-right:-80px;">
+      <div class="col-md-1" style="margin-left:-35px;"></div>
       <div class="col-md-10">
         <div class="row">
-          <div class="col-12 col-md-3 pub-row-heading" style="margin-right:-80px;">Event</div>
+          <div class="col-12 col-md-3 pub-row-heading" style="margin-right:-93px;">Event</div>
           <div class="col-12 col-md-9">
             <a href="https://amlap2024.ed.ac.uk/" target="_blank" rel="noopener">
             30th Conference on Architectures and Mechanisms for Language Processing (AMLaP)
