--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -742,11 +742,11 @@
     
 
     
-    <div class="row" style="padding-top:8px;">
-      <div class="col-md-1" style="margin-left:-30px;"></div>
+    <div class="row" style="padding-top:8px; margin-right:-80px;">
+      <div class="col-md-1" style="margin-left:-35px;"></div>
       <div class="col-md-10">
         <div class="row">
-          <div class="col-12 col-md-3 pub-row-heading" style="margin-right:-80px;">Event</div>
+          <div class="col-12 col-md-3 pub-row-heading" style="margin-right:-93px;">Event</div>
           <div class="col-12 col-md-9">
             <a href="https://amlap2024.ed.ac.uk/" target="_blank" rel="noopener">
             30th Conference on Architectures and Mechanisms for Language Processing (AMLaP)
@@ -787,6 +787,7 @@
 </div>
 <script src="https://mfr.osf.io/static/js/mfr.js"></script>
 <script>var mfrRender = new mfr.Render("mfrIframe", "https://mfr.osf.io/render?url=https://osf.io/h83yq/?direct%26mode=render%26action=download%26mode=render");</script>
+<p><br></p>
 <div id="snippet-1" class="section level4">
 <h4>Snippet 1</h4>
 <p><em>The use of code scripts facilitates the reproducibility, testability and expandability of materials.</em></p>
