--- a/presentation/towards-reproducibility-and-maximally-open-data/index.html
+++ b/presentation/towards-reproducibility-and-maximally-open-data/index.html
@@ -683,11 +683,11 @@
     
 
     
-    <div class="row" style="padding-top:8px;">
-      <div class="col-md-1" style="margin-left:-30px;"></div>
+    <div class="row" style="padding-top:8px; margin-right:-80px;">
+      <div class="col-md-1" style="margin-left:-35px;"></div>
       <div class="col-md-10">
         <div class="row">
-          <div class="col-12 col-md-3 pub-row-heading" style="margin-right:-80px;">Event</div>
+          <div class="col-12 col-md-3 pub-row-heading" style="margin-right:-93px;">Event</div>
           <div class="col-12 col-md-9">
             <a href="https://nuigalway.mediaspace.kaltura.com/media/OSW2021A&#43;OSCG&#43;Open&#43;Scholarship&#43;Prize&#43;-&#43;The&#43;Final!/1_d7ekd3d3/121659351" target="_blank" rel="noopener">
             Open Scholarship Prize Competition 2021, Open Scholarship Community Galway
