--- a/presentation/index.html
+++ b/presentation/index.html
@@ -708,7 +708,7 @@
 
     
     <div class="article-style">
-      Unlike children acquiring their first language (L1), L2/Ln learners can draw on existing grammatical knowledge to ease the task, at …
+      The acquisition of a third language (L3) often involves the transfer of morphosyntactic structures from the first language and/or the …
     </div>
     
 
