--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -270,7 +270,7 @@
   
   "performer": {
     "@type": "Person",
-    "name": "\u003cspan style=\"font-size:140%;\"\u003ePablo Bernabeu, Gabriella Silva, Ngoc Giang My Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso\u003c/span\u003e"
+    "name": "\u003cspan style=\"font-size:140%;\"\u003ePablo Bernabeu, Gabriella Silva, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso\u003c/span\u003e"
   },
   
   "description": "To err is human, but when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using some helpful tools. For instance, we can make our research materials FAIRer—that is, more Findable, Accessible, Interoperable and Reusable (Wilkinson et al., 2016). These practices facilitate the reproducibility, revision, modification and expansion of research materials, by the creators themselves and by other researchers, at any point in time, which is convenient due to the vital importance of methods in experimental research (Barsalou, 2019). In the current presentation, we describe how documentation practices and open-source software (namely, R and OpenSesame) were used to prepare materials for a study in multilingualism using artificial languages, and comprising several sessions and several grammatical properties. So far, the creation of artificial languages in similar studies has not generally displayed an extensive use of FAIR practices (Cross et al., 2021; González Alonso et al., 2020; Mitrofanova et al., 2023; Morgan-Short et al., 2012; Pereira Soares et al., 2022). In our current study, the stimuli were prepared in R using a modular framework that consisted of interoperable components (Snippet 1). The modularity of this method facilitates the expansion of the materials within the same languages and to other languages. Specifically, the minimal components of each language were contained in a base file in the ‘stimulus_preparation’ folder. Furthermore, for the creation of the final stimuli, several controls were exerted to prevent spurious effects. For instance, gender and number were counterbalanced across experimental conditions, words were rotated across grammatical properties and sessions, and frequency of occurrence was controlled (Snippet 2). The final stimuli can be recreated using the script ‘compile_all_stimuli.R’, and the resulting stimuli are saved to the ‘session_materials’ folder. Furthermore, the final stimuli were presented using OpenSesame, which is a free-of-charge software supporting experiments in the social sciences. We describe the implementation of several complex sessions in OpenSesame, which involved the use of conditions for controlling the engagement of certain items. Last, we describe a custom script in OpenSesame that enables the measurement of event-related potentials by time-locking electroencephalographic measures to the onset of specific stimuli. In conclusion, the materials of the current study are accessible, and the workflow is reproducible. As a result, the final materials are testable, modifiable and expandable, improving long-term efficiency."
@@ -571,7 +571,7 @@
 
 
   
-  <span><span style="font-size:140%;">Pablo Bernabeu, Gabriella Silva, Ngoc Giang My Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
+  <span><span style="font-size:140%;">Pablo Bernabeu, Gabriella Silva, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
 
   </span>
   
