--- a/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
+++ b/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
@@ -270,7 +270,7 @@
   
   "performer": {
     "@type": "Person",
-    "name": "\u003cspan style=\"font-size:140%;\"\u003ePablo Bernabeu, Gabriella Silva, Ngoc Giang My Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso\u003c/span\u003e"
+    "name": "\u003cspan style=\"font-size:140%;\"\u003ePablo Bernabeu, Gabriella Silva, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso\u003c/span\u003e"
   },
   
   "description": "The acquisition of a third language (L3) often involves the transfer of morphosyntactic structures from the first language and/or the second language to the developing L3 grammar, allowing the recycling of previously acquired knowledge (Rothman et al., 2015). Under the assumption that this crosslinguistic influence is somewhat systematic, much research has investigated the mechanisms involved in selecting a source of transfer given various (competing) options. The use of artificial languages (AL) has allowed researchers to investigate this process from the very onset of L3 acquisition, with some initial findings suggesting a facilitative role of attention prior to the selection of a source of transfer (González Alonso et al., 2020; Pereira Soares et al., 2022). The current study examines morphosyntactic transfer longitudinally in two sites. In Norway, participants were randomly assigned to training and testing in Mini-Norwegian or Mini-English, the former AL being typologically closer to Norwegian. In Spain, Mini-Spanish and Mini-English were used. The study comprises six sessions. Session 1 consists of an assessment of attention-related executive functions and a language history questionnaire. A week later, Session 2 begins with a resting-state electroencephalographic measurement, which captures attention skills (Rogala et al., 2020). We hypothesise that attention facilitates learning and transfers. The rest of the session is devoted to the grammatical property of gender agreement (part of Norwegian and Spanish grammars). A week later, Session 3 adds the property of differential object marking (part of Spanish grammar, absent in the other two languages). A week later, Session 4 adds the property of verb-object agreement (absent from the English, Norwegian and Spanish grammars). The grammar part of Sessions 2, 3 and 4 consists of a vocabulary pre-training, a training in the new grammatical property, a behavioural test and an electroencephalography experiment measuring event-related potentials (ERPs) in response to grammatical and ungrammatical instances of each property. A week after Session 4, Session 5 provides a retest of the cognitive battery from Session 1. Last, after a consolidation period of four months, all grammatical properties are retested in Session 6 (see Morgan-Short et al., 2012). Our analyses delve into language learning, morphosyntactic transfer, and their associations with executive functions longitudinally."
@@ -571,7 +571,7 @@
 
 
   
-  <span><span style="font-size:140%;">Pablo Bernabeu, Gabriella Silva, Ngoc Giang My Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
+  <span><span style="font-size:140%;">Pablo Bernabeu, Gabriella Silva, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
 
   </span>
   
