--- a/index.html
+++ b/index.html
@@ -3288,16 +3288,16 @@
 </thead>
 <tbody>
 <tr>
-<td>Nov 2024</td>
-<td>Co-organisation and presentations</td>
-<td>Tasks tailored for several electroencephalography and behavioural stations. Short presentations given on electroencephalography, language acquisition and executive functions.</td>
-<td><a href="https://uit.no/tavla/artikkel/862114/sprakdag_med_c-labl_senter_for_sprak_hjerne_og">Public outreach event of the UiT Center for Language, Brain and Learning (C-LaBL)</a>, hosted at the Arctic University Museum of Norway.</td>
-</tr>
-<tr>
 <td>Oct, Nov 2024</td>
 <td>Posters</td>
 <td><a href="/presentation/smart-starts-cognitive-differences-predict-prior-knowledge-involvement-in-language-learning">Smart starts: Cognitive differences predict prior knowledge involvement in language learning</a></td>
 <td>(1) <a href="https://www.sepex24.com/_files/ugd/5182f6_f8e5d3cd93584a0db65e47222c87051a.pdf">XIV Conference of the Spanish Society for Experimental Psychology (SEPEX)</a>, Almería; <br> (2) <a href="https://cdn.ymaws.com/www.psychonomic.org/resource/resmgr/annual_meeting/2024_meeting/abstract_book/2024_Abstracts_Final.pdf">65th Annual Meeting of the Psychonomic Society</a>, New York</td>
+</tr>
+<tr>
+<td>Nov 2024</td>
+<td>Co-organisation and presentations</td>
+<td>Tasks tailored for several electroencephalography and behavioural stations. Short presentations given on electroencephalography, language acquisition and executive functions.</td>
+<td><a href="https://uit.no/tavla/artikkel/862114/sprakdag_med_c-labl_senter_for_sprak_hjerne_og">Public outreach event of the UiT Center for Language, Brain and Learning (C-LaBL)</a>, hosted at the Arctic University Museum of Norway.</td>
 </tr>
 <tr>
 <td>Oct, Nov 2023; June, July, Aug, Sept 2024</td>
@@ -3903,7 +3903,7 @@
     </div>
     <div class="col-12 col-lg-8">
       <p>Since my PhD, I have advised several students and colleagues about conducting behavioural and EEG experiments, and about data management, preprocessing and analysis. Furthermore, during my postdoc, I have co-supervised a master's thesis.</p>
-<p>My PhD scholarship was teaching-based, so I contributed to my department’s curriculum for 180 hours a year. Each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics labs. This activity is detailed below.</p>
+<p>My PhD scholarship was teaching-based, so I contributed to the curriculum of the Lancaster University Department of Psychology for 180 hours a year. Specifically, each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics lab sessions. This activity is detailed below.</p>
 <table>
 <thead>
 <tr>
@@ -3930,7 +3930,7 @@
 </tr>
 <tr>
 <td align="center"></td>
-<td>Statistics for psychologists I (121) using R — Labs</td>
+<td>Statistics for psychologists I (121) using R — Lab sessions</td>
 </tr>
 <tr>
 <td align="center"><strong>2020–21</strong></td>
@@ -3950,7 +3950,7 @@
 </tr>
 <tr>
 <td align="center"></td>
-<td>Statistics for psychologists I and II (121 and 122) using R — Labs</td>
+<td>Statistics for psychologists I and II (121 and 122) using R — Lab sessions</td>
 </tr>
 <tr>
 <td align="center"><strong>2019–20</strong></td>
@@ -3962,7 +3962,7 @@
 </tr>
 <tr>
 <td align="center"></td>
-<td>Master's statistics (401) using R — Labs</td>
+<td>Master's statistics (401) using R — Lab sessions</td>
 </tr>
 <tr>
 <td align="center"><strong>2018–19</strong></td>
@@ -3970,7 +3970,7 @@
 </tr>
 <tr>
 <td align="center"></td>
-<td>Investigating psychology: Analysis (102) using SPSS — Labs</td>
+<td>Investigating psychology: Analysis (102) using SPSS — Lab sessions</td>
 </tr>
 </tbody>
 </table>
