--- a/presentation/index.html
+++ b/presentation/index.html
@@ -590,7 +590,7 @@
 
 
   
-  <span><span style="font-size:140%;">Gabriella Silva, Pablo Bernabeu, Christina Athanasiadi, Stella Pischinger, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
+  <span><span style="font-size:140%;">Gabriella Silva, Pablo Bernabeu, Christina Athanasiadi, Stella Lucia Pischinger, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Jason Rothman, Jorge González Alonso</span></span>
 
       </div>
       
