--- a/presentation/smart-starts-cognitive-differences-predict-prior-knowledge-involvement-in-language-learning/index.html
+++ b/presentation/smart-starts-cognitive-differences-predict-prior-knowledge-involvement-in-language-learning/index.html
@@ -270,7 +270,7 @@
   
   "performer": {
     "@type": "Person",
-    "name": "\u003cspan style=\"font-size:140%;\"\u003eGabriella Silva, Pablo Bernabeu, Christina Athanasiadi, Stella Pischinger, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso\u003c/span\u003e"
+    "name": "\u003cspan style=\"font-size:140%;\"\u003eGabriella Silva, Pablo Bernabeu, Christina Athanasiadi, Stella Lucia Pischinger, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Jason Rothman, Jorge González Alonso\u003c/span\u003e"
   },
   
   "description": "Unlike children acquiring their first language (L1), L2/Ln learners can draw on existing grammatical knowledge to ease the task, at least for those properties where the grammars align. This means that, in addition to statistical learning, there might be a substantial role for individual differences in cognitive processes necessary to identify, recruit and deploy this prior knowledge—e.g., procedural memory, working memory (WM), inhibitory control. In this study, we measured these individual differences through an SRT task, a digit-span, and a Stroop task, at the onset of a longitudinal artificial language (AL) learning paradigm. Grammatical and lexical similarity between the ALs and previous languages (Norwegian-English or Spanish-English) were systematically manipulated. Behavioral measures of sensitivity to grammatical violations in the AL were collected after each training session (three total). Results suggest that the ability to capitalize on prior knowledge is significantly modulated by individual differences in procedural memory, WM and inhibitory control."
@@ -579,7 +579,7 @@
 
 
   
-  <span><span style="font-size:140%;">Gabriella Silva, Pablo Bernabeu, Christina Athanasiadi, Stella Pischinger, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Iva Ivanova, Jason Rothman, Jorge González Alonso</span></span>
+  <span><span style="font-size:140%;">Gabriella Silva, Pablo Bernabeu, Christina Athanasiadi, Stella Lucia Pischinger, My Ngoc Giang Hoang, Vincent DeLuca, Claudia Poch, Jason Rothman, Jorge González Alonso</span></span>
 
   </span>
   
