--- a/index.html
+++ b/index.html
@@ -3663,10 +3663,10 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://www.tilburguniversity.edu/education/masters-programmes/research-master-linguistics-and-communication-sciences">Research Master Language and Communication</a>, <strong>2013&ndash;2017</strong></p>
               <p class="institution" style="color:#5B5B5B">Tilburg University and Radboud University (Netherlands)</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Student member, Master’s curriculum and accreditation committee</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Tilburg University Scholarship for Academic Excellence, 2014/2015</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Grade: 7.54 out of 10 (Distinction)</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Thesis project involving electroencephalography, conducted at the Max Planck Institute for Psycholinguistics.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Tilburg University Scholarship for Academic Excellence, 2014/2015</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Student member, Master’s curriculum and accreditation committee</p>
               <p class="institution" style="max-width: 550px; padding-left:18px; text-indent:-0.8em; margin-left:1em;"></p>
             </div>
           </li>
