--- a/index.html
+++ b/index.html
@@ -3664,7 +3664,7 @@
               <p class="course" style="color:#515151"><a href="https://www.tilburguniversity.edu/education/masters-programmes/research-master-linguistics-and-communication-sciences">Research Master Language and Communication</a>, <strong>2013&ndash;2017</strong></p>
               <p class="institution" style="color:#5B5B5B">Tilburg University and Radboud University (Netherlands)</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Grade: 7.54 out of 10 (Distinction)</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Thesis project involving electroencephalography, conducted at the Max Planck Institute for Psycholinguistics.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Electroencephalography study conducted at the Max Planck Institute for Psycholinguistics</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Tilburg University Scholarship for Academic Excellence, 2014/2015</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Student member, Master’s curriculum and accreditation committee</p>
               <p class="institution" style="max-width: 550px; padding-left:18px; text-indent:-0.8em; margin-left:1em;"></p>
@@ -3902,7 +3902,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>Since my PhD, I have advised several students and colleagues about conducting behavioural and EEG experiments, and about data management, preprocessing and analysis. Furthermore, during my postdoc, I have co-supervised a master's thesis.</p>
+      <p>Since my PhD, I have advised several students and colleagues about conducting behavioural and EEG experiments, and about data management, preprocessing and analysis. Furthermore, during my postdoc, I have co-supervised a master's thesis. Finally, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
 <p>My PhD scholarship was teaching-based, so I contributed to the curriculum of the Lancaster University Department of Psychology for 180 hours a year. Specifically, each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics lab sessions. This activity is detailed below.</p>
 <table>
 <thead>
@@ -3974,8 +3974,8 @@
 </tr>
 </tbody>
 </table>
-<p>Furthermore, during my PhD, I was a representative for graduate teaching assistants in my department for a year.</p>
-<p>Finally, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">Spanish to adults in Lithuania</a>.</p>
+<p>During my PhD, I was also a representative for graduate teaching assistants in my department for a year.</p>
+<p>Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">taught Spanish to adults in Lithuania</a>.</p>
 
     </div>
   
